--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -9,7 +9,8 @@
         }
     }
     &__official {
-        font-weight: 900;
+        font-family: 'Museo Sans Cyrl';
+        font-weight: 500;
         font-size: 12px;
         color: #fff;
         text-align: center;
