--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,4 +8,9 @@
     font-size: 12px;
     color: #FFFFFF;
     text-transform: uppercase;
+    &__main {
+        width: 300px;
+        height: 50px;
+        font-size: 16px;
+    }
 }
