--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -2,4 +2,51 @@
     min-height: 650px;
     padding: 21px 0 93px 0;
     background: url(../../img/header_bg.jpg) center (center/cover) no-repeat;
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 91px;
+    }
+    &__header {
+        font-weight: 700;
+        font-size: 42px;
+        color: #fff;
+        text-transform: uppercase;
+    }
+    &__subheader {
+        font-weight: 500;
+        font-size: 24px;
+        color:#fff;
+        text-transform: uppercase;
+    }
+    &__icons {
+        display: flex;
+        justify-content: space-between;
+        margin: 60px 0 65px 0;
+        width: 425px;
+    }
+    &__icon {
+        width: 136px;
+        text-align: center;
+        color: #fff;
+        font-size: 14px;
+        font-weight: 500;
+        img {
+            display: block;
+            margin: 0 auto;
+            margin-bottom: 20px;
+        }
+    }
+    &__link {
+        font-weight: 500;
+        font-size: 16px;
+        color:#fff;
+        text-transform: uppercase;
+        margin-top: 18px;
+        a {
+            text-decoration: underline;
+            color: #fff;
+        }
+    }
 }
