--- a/src/sass/blocks/_advantage.scss
+++ b/src/sass/blocks/_advantage.scss
@@ -26,10 +26,12 @@
     }
     &__icon_description {
         width: 250px;
-        height: 70px;
         margin: 0 auto;
         font-weight: 300;
         font-size: 14px;
+    }
+    span {
+        text-decoration: underline;
     }
     
 }
